force-app/main/default/objects/APIPerformance__c/APIPerformance__c.object-meta.xml
<CustomObject>
    <label>API Performance</label>
    <nameField>
        <displayFormat>APIP-{000000}</displayFormat>
        <label>API Performance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>