force-app/main/default/objects/APIPerformance__c/fields/APIConfigID__c.field-meta.xml
<CustomField>
    <fullName>APIConfigID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API CONFIG ID</label>
    <referenceTo>APIsConfig__c</referenceTo>
    <relationshipName>APIPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>