force-app/main/default/objects/APIPerformance__c/fields/NumberOfFailTrx__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFailTrx__c</fullName>
    <label>Number of Fail Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>