force-app/main/default/objects/APIPerformance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APIConfigID__c</columns>
    <columns>ReportingDate__c</columns>
    <columns>NumberOfSuccessfulTrx__c</columns>
    <columns>NumberOfFailTrx__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>